finish new proofread

--- a/main.tex
+++ b/main.tex
@@ -323,6 +323,8 @@ This paper addresses the problem of finding cycles and attractors in asynchronou
 We present a computational Answer Set Programming (ASP) based method to identify all attractors in fully asynchronous updating mode and without any network reduction. The method goes through a complete enumeration of the states forming each attractor without the necessity to simulate the whole network or construct the state transition graph. We performed extensive computational experiments which showed good performance and fitted the expected theoretical results.
 \parttitle{Conclusion} 
 The originality of our approach relies in the exhaustive enumeration of all possible states verifying the attractor properties thanks to the use of ASP. The merits of our methods are illustrated by applying them to biological examples of various sizes and comparing the results with some existing approaches. It turns out that our approach succeeds in processing large models, that is, up to tens of components and interactions.
+
+\Maxime{J'ai un peu du mal à dire que les modèles qu'on traite sont “large”. Si j'en crois les résultats, on va jusqu'à 28 composants. Il faudrait au moins essayer avec les modèels à 40 composants ?}
 \end{abstract}
 
 \begin{keyword}
