add some referencs

--- a/parts/intro.tex
+++ b/parts/intro.tex
@@ -13,13 +13,13 @@ and it explains why, for any initial condition and on the long run, any system w
 The system has then reached a minimal basin of attraction.
 Such constructs have been interpreted as distinct responses of the organism, such as distinct cell types in multicellular organisms. \Maxime{Ref ? Peut-être détailler un peu plus pour insister sur l'intérêt des attracteurs ?}
 
-Various kinds of mathematical models have been proposed for the modeling of Biological Regulatory Networks (BRNs). These models include neural networks, differential equations, Petri nets, Boolean networks (as proposed by Kauffman \Emna{ref}), probabilistic Boolean networks, and other multi-valued models such Synchronous Automata Networks. In this paper, we focus on Process Hitting \Maxime{ref}, an asynchronous formalism which is a restriction of Automata Networks, and that especially encompasses the framework of René Thomas \Emna{ref}. Indeed, qualitative frameworks have received substantial attention, because of their capacity to capture the switching behavior of genetic or biological processes, and therefore their long-term behavior. This is why we use a qualitative representation for the study of basins of attraction.
+Various kinds of mathematical models have been proposed for the modeling of Biological Regulatory Networks (BRNs). These models include neural networks, differential equations, Petri nets, Boolean networks (as proposed by Kauffman \cite{stuart1993origins}), probabilistic Boolean networks, and other multi-valued models such Synchronous Automata Networks. In this paper, we focus on Process Hitting \Maxime{ref}, an asynchronous formalism which is a restriction of Automata Networks, and that especially encompasses the framework of René Thomas \Emna{ref}. Indeed, qualitative frameworks have received substantial attention, because of their capacity to capture the switching behavior of genetic or biological processes, and therefore their long-term behavior. This is why we use a qualitative representation for the study of basins of attraction.
 More particularly, in a qualitative framework, a minimal basin of attraction can take two different forms: it can be either a \emph{stable state} (a state from which the system doesn't evolve anymore, also called a fixed point) or an \emph{attractor} (a minimal set of states that loops indefinitely and cannot be escaped).
 
 %%%%%%%%%
 
 The computational problem of finding all attractors in a BRN is difficult. Even the simpler problem of deciding whether the system has a fixed point (which can be seen as the smallest possible kind of attractor) is NP-hard.
-Based on the former \Maxime{Il manque une ref ?}, many studies have proven that the computational way of attractors in BRNs is a NP-hard problem. \Maxime{ref ?}
+Based on the former \Maxime{Il manque une ref ?}, many studies have proven that the computational way of attractors in BRNs is a NP-hard problem \cite{klemm2005stable,akutsu2012finding}. \Maxime{ref ?}
 
 Therefore, it is meaningful to identify attractors. Of course, these can be done by examining all possible states of a network with an exhaustive approach. For instance, finding an attractor or a stable state can be performed by randomly selecting an initial state and following a long enough trajectory.
 However, listing all attractors with this method can be too time consuming even for small networks: $2^n$ initial states have to be considered for a Boolean networks of size $n$; and multi-valued networks raise this complexity even more. Furthermore, enough computation have to be performed to ensure that all trajectories have been explored and all attractors were found.
